# pystat

./: .gitignore  Cargo.toml  README.md
crates/pystat_scraper/: Cargo.toml  README.md  pyproject.toml
crates/pystat_scraper/python/notebooks/: pypi_api.ipynb
crates/pystat_scraper/python/pystat_scraper_python/: main.py
crates/pystat_scraper/python/tests/: test_get_github_url.py
crates/pystat_scraper/src/: main.rs
