[package]
name = "pystat_scraper"
version = {workspace = true}
edition = "2021"


[dependencies]
anyhow = "1.0.75"
git2 = "0.17.2"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.183"
serde_json = "1.0.105"
table-extract = "0.2.3"
tokio = { version = "1.32.0", features = ["full"] }
